# motrixsim-docs

./: .gitattributes  .gitignore  .prettierignore  .readthedocs.yaml  CITATION.cff  README.md  README.zh-CN.md  build.rs  pyproject.toml  ruff.toml
docs/: CLAUDE.md  gen_poster.sh
docs.en/source/: conf.py  index.md
docs/source/: conf.py  index.md  index_en.md  index_zh.md
examples/: actuator.py  adhesion.py  body.py  camera_control.py  change_camera_state.py  combine_msd.py  custom_ui.py  empty.py  external_force.py  falling_ball.py  friction.py  g1_keyboard_control.py  geom.py  gizmos.py  go1.py  go1_multi_task.py  go2.py  go2_keyboard_control.py  grasp_shaking_test.py  gyroscope.py  gyroscope_zero_gravity.py  hello_motrixsim.py  hello_usd.py  hfield.py  ik.py  interactive_viewer.py  joint.py  keyboard_car.py  link.py  load_from_str.py  local_arm.py  model.py  mouse_click.py  newton_cradle.py  options.py  parallel_bench.py  parallelsim.py  partial_rendering.py  read_keyboard.py  render_settings.py  (+5 more)
examples/assets/: actuator.xml  batch_world_render.xml  body.xml  box_on_plane.xml  box_on_ramp.xml  control_cameras.xml  cylinder_on_inclined_plane.xml  empty.xml  falling_ball.xml  friction.xml  geom.xml  gyroscope.xml  gyroscope_zero_gravity.xml  hfield.xml  joint.xml  keyboard_car.xml  link.xml  local_arm.xml  model.xml  mouse_click.xml  multi_world_camera.xml  newton_cradle_mj.xml  newton_cradle_mt.xml  options.xml  partial_rendering.xml  randomization.xml  render_settings.xml  site_and_sensor.xml  slope.xml  touch_sensor_demo.xml
examples/bench/: speed.py
examples/control/: car.py  g1_motion_tracking.py  go1.py  ik.py  keyboard_car.py  local_arm.py  mouse_click.py  osc.py  rm65_open_cabinet.py  robot_locomotion.py  robotic_arm.py  shadow_hand_repose.py
examples/getting_started/: empty.py  falling_ball.py  hello_motrixsim.py  load_from_str.py  slope.py
examples/mujoco/: bench.py  grasp_shaking_test.py
examples/parallel/: parallel_bench.py  parallelsim.py
examples/physics/: actuator.py  adhesion.py  body.py  combine_msd.py  external_force.py  friction.py  geom.py  hello_usd.py  hfield.py  joint.py  link.py  model.py  options.py  (+1 more)
legged_gym/: __init__.py  addr.py
scripts/: test_examples.py
tests/: test_terrain_scan_visualizer.py
(+428 files in other folders)
