[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motrixsim-docs"
description = "A high-performance physics simulation engine designed for multibody dynamics and robotics simulation."
authors = [
    { name = "Motphys", email = "developers@motphys.com" },
]
dependencies = [
    "motrixsim",
]
requires-python = "==3.10.*"
readme = "README.md"
license = "Apache-2.0"
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]
include = ["legged_gym*"]

[project.optional-dependencies]
docs = [
    "motrixsim[docs]",
]
examples = [
    "motrixsim[demo,mujoco_demo]",
]

[tool.uv]
prerelease = "allow"